# LesslysFlowersInventoryApp

./: .env  build.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
FlowersInventory/: Dockerfile  compose.yaml  db.sqlite3  invoice21.xlsx  invoices24_RLsszVt.xlsx  invoices35.xlsx  invoices37_U6URDJK.xlsx  invoices39.xlsx  invoices44_VkLxAiP.xlsx  invoices46_dkisAfd.xlsx  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
FlowersInventory/FlowersInventory/: settings.py  urls.py
FlowersInventory/InvoiceImport/: admin.py  models.py  resources.py  tests.py  urls.py  views.py
FlowersInventory/data/: INVOICE11.xlsx  INVOICE13.xlsx  INVOICE18.xlsx  INVOICE8.xlsx  TEST (1)_2pZTCfO.xlsx  invoice22.xlsx  invoice_4.xlsx  invoices20.xlsx  invoices25.xlsx  invoices41.xlsx  invoices42.xlsx  invoices43_UBLfMWn.xlsx  invoices48.xlsx
InvoiceImport/: admin.py  apps.py  models.py  resources.py  tests.py  urls.py  views.py
InvoiceImport/migrations/: 0001_initial.py  0002_product_quantity.py  0003_auto_20230717_1953.py  0004_auto_20230720_1944.py  0005_alter_product_unit_type.py  0006_alter_product_unit_type.py  (+8 more)
data/: INVOICE10.xlsx  INVOICE12.xlsx  INVOICE13 (1).xlsx  INVOICE14.xlsx  INVOICE15.xlsx  INVOICE7.xlsx  INVOICE9_vAjyPpW.xlsx  RECENT TEST_aIoUzjw.xlsx  TEST (4).xlsx  TEST (5)_pHF0DuE.xlsx  invoice23.xlsx  invoices19.xlsx  invoices26.xlsx  invoices27_Hx0sEra.xlsx  invoices28.xlsx  invoices29.xlsx  invoices30.xlsx  invoices36_17yrgHh.xlsx  invoices38.xlsx  invoices40.xlsx  invoices45.xlsx  invoices47.xlsx
(+47 files in other folders)
