[tool.poetry]
name = "flowersinventory"
version = "0.1.0"
description = "inventory app"
authors = ["lesslymejia <111783028+lesslymejia@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
