[tool.poetry]
name = "lesslysflowersinventoryapp"
version = "0.1.0"
description = ""
authors = ["lesslymejia <111783028+lesslymejia@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=3.2.19,<3.3.0"
pandas = "2.1.0"
xlrd = ">=2.0.1,<2.1.0"
tablib = ">=3.1.0,<3.2.0"
openpyxl = ">=3.1.2,<3.2.0"
requests = ">=2.27.1,<2.28.0"
psycopg2-binary = "^2.9.7"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
